--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹소켓</title>
+    <title>Websocket</title>
 </head>
 <body>
-    <h1>웹소켓 테스트</h1>
+    <h1>Websocket Test</h1>
 
     <!-- 버튼 2개 생성 -->
     <button id="btn_send">메시지 전송</button>
