--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </body>
 <script>
     // 1. 웹소켓 클라이언트 객체 생성
-    const webSocket = new WebSocket("ws://localhost:30001");
+    const webSocket = new WebSocket("ws://10.13.0.5:30001");
 
 
     // 2. 웹소켓 이벤트 처리
