--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Websocket</title>
 </head>
 <body>
-    <h1>Websocket Test 01</h1>
+    <h1>Websocket Test</h1>
 
     <!-- 버튼 2개 생성 -->
     <button id="btn_send">메시지 전송</button>
